# shogiAI

./: CMakeLists.txt  README.md
src/: board.cpp  board.hpp  eval.cpp  eval.hpp  main.cpp  movegen.cpp  movegen.hpp  search.cpp  search.hpp  types.hpp
tests/: test_main.cpp
